# rs-auth-core

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs
proto/: health.proto  user.proto
proto/commons/: location.proto  user.proto
src/: main.rs
src/infrastructure/: infra_state.rs  mod.rs
src/infrastructure/configuration/: database.rs
src/infrastructure/dto/: mod.rs  response.rs
src/infrastructure/dto/input/: create_user.rs
src/infrastructure/entities/: cities.rs  countries.rs  mod.rs  phone_numbers.rs  prelude.rs  refresh_tokens.rs  roles.rs  user_phone_numbers.rs  users.rs
src/infrastructure/repositories/: user_repository.rs
src/presentation/: mod.rs
src/presentation/grpc/: health_service_handler.rs  mod.rs  user_service_handler.rs
tests/integration/: grpc_connection_test.rs  mod.rs
