[package]
name = "auth_core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
prost = "0.14.3"
prost-types = "0.14.3"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"]}
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-uuid", "mock" ] }
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
log = "0.4.29"
uuid = { version = "1.0", features = ["v7", "serde"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
